--- a/Contents/Info.plist
+++ b/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleGetInfoString</key>
-	<string>1.6.1 copyright 2005-2012, Tetsuro KURITA</string>
+	<string>1.6.2b copyright 2005-2012, Tetsuro KURITA</string>
 	<key>CFBundleHelpBookFolder</key>
 	<string>XDict Help</string>
 	<key>CFBundleHelpBookName</key>
@@ -11,9 +11,9 @@
 	<key>CFBundleIdentifier</key>
 	<string>Scriptfactory.XDict</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.6.1</string>
+	<string>1.6.2b</string>
 	<key>CFBundleVersion</key>
-	<string>1.6.1</string>
+	<string>1.6.2b</string>
 	<key>WindowState</key>
 	<dict>
 		<key>dividerCollapsed</key>
