--- a/Contents/Info.plist
+++ b/Contents/Info.plist
@@ -9,11 +9,11 @@
 	<key>CFBundleIdentifier</key>
 	<string>net.script-factory.XDict</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.7.2b</string>
+	<string>1.7.2</string>
 	<key>CFBundleVersion</key>
 	<string>1.7.2</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright 2005-2018, Tetsuro KURITA</string>
+	<string>Copyright 2005-2020, Kurita Tetsuro</string>
 	<key>WindowState</key>
 	<dict>
 		<key>bundleDividerCollapsed</key>
